--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: Athena Jekyll Theme
 description: A simple and elegant theme for Jekyll and GitHub Pages.
 social_link: twitter
-social_username: broccolini
-github_repo: athena
-github_username: broccolini
+social_username: daiyi
+github_repo: static_site_platform
+github_username: daiyi
 theme_color: light
 remote_theme: internet-de-france/athena
-baseurl: 'https://daiyi.co/static_site_platform'
+baseurl: /static_site_platform
 defaults:
   - scope:
       path: ''
